--- a/website/templates/add_record.html
+++ b/website/templates/add_record.html
@@ -12,6 +12,8 @@
 
 
         <button type="submit" class="btn btn-secondary">Add record</button>
+        <a href="{% url 'home' %}" class="btn btn-danger">Back</a>
+
     </form>
 </div>
 
