add cancel btn to update page

--- a/website/templates/update_record.html
+++ b/website/templates/update_record.html
@@ -12,6 +12,9 @@
 
 
         <button type="submit" class="btn btn-secondary">Updated record</button>
+        <a href="{% url 'home' %}" class="btn btn-danger">Cancel</a>
+
+
     </form>
 </div>
 
