--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 {% if user.is_authenticated %}
-
+<form class="d-flex" role="search">
+    <input type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success" type="submit">Search</button>
+</form>
+<br />
 <table class="table table-striped table-hover  table-bordered">
     <thead class='table-dark'>
         <tr>
