--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -14,6 +14,8 @@
             <th scope="col">Name</th>
             <th scope="col">E-mail</th>
             <th scope="col">Phone</th>
+            <th scope="col">Side</th>
+            <th scope="col">Pix</th>
             <th scope="col">Address</th>
             <th scope="col">City</th>
             <th scope="col">State</th>
@@ -31,6 +33,8 @@
                 {{record.last_name}}</td>
             <td>{{record.email}}</td>
             <td>{{record.phone}}</td>
+            <td>{{record.side}}</td>
+            <td>{{record.pix}}</td>
             <td>{{record.address}}</td>
             <td>{{record.city}}</td>
             <td>{{record.state}}</td>
