--- a/website/templates/record.html
+++ b/website/templates/record.html
@@ -14,6 +14,8 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><strong> E-mail: </strong> {{customer_record.email}}</li>
                 <li class="list-group-item"><strong> Phone: </strong>{{customer_record.phone}}</li>
+                <li class="list-group-item"><strong> Side: </strong>{{customer_record.side}}</li>
+                <li class="list-group-item"><strong> Pix: </strong>{{customer_record.pix}}</li>
                 <li class="list-group-item"><strong> Address: </strong>{{customer_record.address}}</li>
                 <li class="list-group-item"><strong> City: </strong>{{customer_record.city}}</li>
                 <li class="list-group-item"><strong> State: </strong>{{customer_record.state}}</li>
