--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
 {% if user.is_authenticated %}
 <form class="d-flex" role="search" method="POST" , action="{% url 'search_results' %}">
     {%csrf_token%}
@@ -8,7 +9,7 @@
     <button class="btn btn-outline-secondary" type="submit">Search</button>
 </form>
 <br />
-<table class="table table-striped table-hover  table-bordered">
+<table class="table table-hover table-hover  table-bordered">
     <thead class='table-dark'>
         <tr>
             <th scope="col">Name</th>
