--- a/website/templates/view_tournament.html
+++ b/website/templates/view_tournament.html
@@ -25,7 +25,7 @@
 <a href="{% url 'tournament_list' %}" class="btn btn-secondary">Back</a>
 <a href="{% url 'update_tournament' tournament.id %}" class="btn btn-primary" id="update-button">Update</a>
 <a href="{% url 'create_teams' tournament.id %}" class="btn btn-primary">Create Teams</a>
-<a href="#" class="btn btn-primary">Create Matches</a>
+<a href="{% url 'gen_1_phase_matches' tournament.id %}" class="btn btn-primary">Create Matches</a>
 <a href="{% url 'delete_tournament' tournament.id %}" class="btn btn-danger">Cancel & Delete</a>
 <hr>
 
