add ranking page

--- a/website/templates/first_phase_matches.html
+++ b/website/templates/first_phase_matches.html
@@ -39,12 +39,8 @@
 </table>
 
 <hr>
-<h1>RANKING</h1>
-{% for double in doubles %}
-{{double.player1}} e {{double.player2}}
-{% endfor %}
 
-
+<a href="{% url 'get_tournament_ranking' tournament.id %}" class="btn btn-primary">See Ranking</a>
 
 
 
