--- a/website/templates/get_tournament_ranking.html
+++ b/website/templates/get_tournament_ranking.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-
+{% load custom_filters %}
 {% block content %}
 
-<h1> RANKING PAGE </h1>
+<h1> {{tournament.name}} Ranking </h1>
 
 <table class="table table-striped table-hover table-bordered">
     <thead class="table-dark">
@@ -10,6 +10,7 @@
             <th scope="col">ID</th>
             <th scope="col">Players</th>
             <th scope="col">Wins</th>
+            <th scope="col">Balance</th>
             <th scope="col">Scored points</th>
             <th scope="col">Conceded points</th>
             <th scope="col">Defeats</th>
@@ -22,6 +23,7 @@
             <td>{{ double.id }}</td>
             <td>{{ double.player1.first_name }} / {{ double.player2.first_name }}</td>
             <td>{{ double.wins }}</td>
+            <td>{{ double.balance }}</td>
             <td>{{ double.scored_points }}</td>
             <td>{{ double.conc_points }}</td>
             <td>{{ double.defeats }}</td>
